# mangadex_fetcher

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  Makefile.in  Makefile_old  README.md  configure  configure.ac
src/: Makefile.am  Makefile.in  arg.cpp  arg.h  cbz.cpp  cbz.h  main.cpp  message.cpp  message.h  scrape.cpp  scrape.h  sig.cpp  sig.h  sort.cpp  sort.h
