# what flags you want to pass to the C compiler & linker
AM_CXXFLAGS = -Wall -std=c++17
AM_LDFLAGS = -lcurl -larchive

bin_PROGRAMS = mangadex_fetcher
mangadex_fetcher_SOURCES = arg.cpp  arg.h  cbz.cpp  cbz.h  main.cpp  message.cpp  message.h  scrape.cpp  scrape.h  sig.cpp  sig.h  sort.cpp  sort.h

